command line injection code modified